# ChangeLog for kde-base/kpilot
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/ChangeLog,v 1.54 2007/01/17 18:44:44 flameeyes Exp $

  17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Tarball was refreshed, regenerate digest.

*kpilot-3.5.6 (16 Jan 2007)

  16 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> +kpilot-3.5.6.ebuild:
  Bump to 3.5.6 (prerelease).

  11 Dec 2006; <kloeri@gentoo.org> ChangeLog:
  Stable on ia64.

  11 Dec 2006; <kloeri@gentoo.org> kpilot-3.5.5.ebuild:
  Stable on ia64.

  18 Nov 2006; Diego Pettenò <flameeyes@gentoo.org> -kpilot-3.5.2.ebuild,
  -kpilot-3.5.3.ebuild, -kpilot-3.5.4.ebuild:
  Remove old versions.

  16 Nov 2006; Joseph Jezak <josejx@gentoo.org> kpilot-3.5.5.ebuild:
  Marked ppc stable for bug #147570.

  14 Nov 2006; Gustavo Zacarias <gustavoz@gentoo.org> kpilot-3.5.5.ebuild:
  Stable on sparc wrt #147570

  13 Nov 2006; Danny van Dyk <kugelfang@gentoo.org> kpilot-3.5.5.ebuild:
  Marked stable on amd64 wrt bug #147570.

  13 Nov 2006; Christian Faulhammer <opfer@gentoo.org> kpilot-3.5.5.ebuild:
  "Stable x86, bug #147570"

*kpilot-3.5.5 (03 Oct 2006)

  03 Oct 2006; Diego Pettenò <flameeyes@gentoo.org> +kpilot-3.5.5.ebuild:
  Bump to 3.5.5 (pre-release).

  26 Sep 2006; Ioannis Aslanidis <deathwing00@gentoo.org>
  kpilot-3.5.2.ebuild, kpilot-3.5.3.ebuild, kpilot-3.5.4.ebuild:
  Fixed DEPEND/RDEPEND.

  17 Sep 2006; Carsten Lohrke <carlo@gentoo.org> -kpilot-3.4.3.ebuild:
  Drop KDE 3.4.

  07 Sep 2006; Diego Pettenò <flameeyes@gentoo.org> kpilot-3.5.4.ebuild:
  Add ~x86-fbsd keyword.

  26 Jul 2006; Carsten Lohrke <carlo@gentoo.org> kpilot-3.5.4.ebuild:
  Restore keywords.

*kpilot-3.5.4 (25 Jul 2006)

  25 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> +kpilot-3.5.4.ebuild:
  Bump to 3.5.4 (pre-release).

*kpilot-3.5.3 (01 Jun 2006)

  01 Jun 2006; Diego Pettenò <flameeyes@gentoo.org> +kpilot-3.5.3.ebuild:
  Update to new release.
