@@ -1,9 +1,9 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/kpilot-3.5.5.ebuild,v 1.6 2006/12/11 13:29:56 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/kpilot-3.5.5.ebuild,v 1.7 2007/01/27 15:14:00 flameeyes Exp $
 
 KMNAME=kdepim
-MAXKDEVER=$PV
+MAXKDEVER=3.5.6
 KM_DEPRANGE="$PV $MAXKDEVER"
 inherit kde-meta eutils
 
