@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kpilot
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/ChangeLog,v 1.54 2007/01/17 18:44:44 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kpilot/ChangeLog,v 1.55 2007/01/27 15:14:00 flameeyes Exp $
+
+  27 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> kpilot-3.5.5.ebuild:
+  Allow installing on newer versions of kde.
 
   17 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
   Tarball was refreshed, regenerate digest.
